fix(order): Order z-index bug was seen under pizza price tag

--- a/src/order/Order.css
+++ b/src/order/Order.css
@@ -8,6 +8,7 @@
   display: flex;
   border-top: 1px solid rgb(234, 234, 234);
   box-shadow: 0 -2px 2px rgba(0, 0, 0, 0.1);
+  z-index: 2;
 }
 
 .Order button {
